--- a/api/wa_config.json
+++ b/api/wa_config.json
@@ -1,6 +1,7 @@
 {
   "app_version":6,
   "free_task_delayed":60,
+  "night_task_delayed":60,
   "night_delay":{
              "S7001":[45,90],
        "S7002":[45,90],
