--- a/api/wa_config.json
+++ b/api/wa_config.json
@@ -1,69 +1,5 @@
 {
   "app_version":6,
   "free_task_delayed":60,
-  "night_task_delayed":60,
-  "night_delay":{
-             "S7001":[45,90],
-       "S7002":[45,90],
-       "S7003":[45,90],
-       "S7004":[45,90],
-       "S7005":[45,90],
-       "S7006":[45,90],
-       "S7007":[45,90],
-       "S7008":[45,90],
-       "S7009":[45,90],
-       "S7010":[45,90],
-       "S7011":[45,90],
-       "S7012":[45,90],
-       "S7013":[45,90],
-       "S7014":[45,90],
-       "S7015":[45,90],
-       "S7016":[45,90],
-       "S7017":[45,90],
-       "S7018":[45,90],
-       "S7019":[45,90],
-       "S7020":[45,90],
-       "S7021":[45,90],
-       "S7022":[45,90],
-       "S7023":[45,90],
-       "S7024":[45,90],
-       "S7025":[45,90],
-       "S7026":[45,90],
-       "S7027":[45,90],
-       "S7028":[45,90],
-       "S7029":[45,90],
-       "S7030":[45,90],
-       "S7031":[45,90],
-       "S7032":[45,90],
-       "S7033":[45,90],
-       "S7034":[45,90],
-       "S7035":[45,90],
-       "S7036":[45,90],
-       "S7037":[45,90],
-       "S7038":[45,90],
-       "S7039":[45,90],
-       "S7040":[45,90],
-       "S7041":[45,90],
-       "S7042":[45,90],
-       "S7043":[45,90],
-       "S7044":[45,90],
-       "S7045":[45,90],
-       "S7046":[45,90],
-       "S7047":[45,90],
-       "S7048":[45,90],
-       "S7049":[45,90],
-       "S7050":[45,90],
-       "S7051":[45,90],
-       "S7052":[45,90],
-       "S7053":[45,90],
-       "S7054":[45,90],
-       "S7055":[45,90],
-       "S7056":[45,90],
-       "S7057":[45,90],
-       "S7058":[45,90],
-       "S7059":[45,90],
-       "S7060":[45,90],
-       "S8001":[45,90],
-       "S8002":[60,120]
-  }
+  "night_task_delayed":40
 }
